docs: Session 25 - Comprehensive documentation & /compodoc analysis command
Session accomplishments:
- Added comprehensive JSDoc to chemistry and physics domain files (18 files)
- Created /compodoc custom command with 7 flags for documentation/dependency/module analysis
- Implemented scripts/compodoc-analyzer.py analysis engine (387 lines)
- Fixed command execution by matching working command structure (bootstrap.md pattern)
- Created user guide docs/COMPODOC-COMMAND.md (434 lines)

Current metrics:
- Documentation coverage: 73.1% (74/118 items fully documented)
- Circular dependencies: 0 detected ✅
- Module configuration issues: 2 found (primeng.module.ts, app-routing.module.ts)
- Components coverage: 48.7% (priority for next session)

All /compodoc flags working:
- /compodoc -doc    : Coverage analysis
- /compodoc -circular: Dependency detection
- /compodoc -module : Module anti-pattern detection
- /compodoc -all    : Run all analyses
- /compodoc -gen    : Regenerate in container
- /compodoc -help   : Show help

--- a/frontend/documents/interfaces/PhysicsNode.html
+++ b/frontend/documents/interfaces/PhysicsNode.html
@@ -1281,6 +1281,15 @@
   syllabus?: SyllabusItem[];
 }
 
+/**
+ * Represents a single syllabus topic within a course
+ *
+ * @interface SyllabusItem
+ * @property {string} topic - Name of the syllabus topic
+ * @property {string} description - Brief explanation of topic content
+ * @property {string[]} keyPoints - Bullet points of key concepts covered
+ * @property {number} estimatedHours - Approximate study hours for mastery
+ */
 export interface SyllabusItem {
   topic: string;
   description: string;
