--- a/frontend/documents/interfaces/SyllabusItem.html
+++ b/frontend/documents/interfaces/SyllabusItem.html
@@ -1046,6 +1046,13 @@
             <code>src/app/features/physics/physics-knowledge-path.ts</code>
         </p>
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Represents a single syllabus topic within a course</p>
+
+            </p>
 
 
 
@@ -1170,6 +1177,15 @@
   syllabus?: SyllabusItem[];
 }
 
+/**
+ * Represents a single syllabus topic within a course
+ *
+ * @interface SyllabusItem
+ * @property {string} topic - Name of the syllabus topic
+ * @property {string} description - Brief explanation of topic content
+ * @property {string[]} keyPoints - Bullet points of key concepts covered
+ * @property {number} estimatedHours - Approximate study hours for mastery
+ */
 export interface SyllabusItem {
   topic: string;
   description: string;
